feat: Add description field to file records
Introduces a new 'description' field to the FileRecord type, allowing for more detailed information to be stored with each expediente or nota. This change impacts the `FileForm`, `FileList`, and `FileCard` components to accommodate and display this new field. The application's name and package name have also been updated to reflect the expanded scope to include "Notas".

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "seguimiento-de-expedientes---programa-n°-77",
+  "name": "seguimiento-de-expedientes-y-notas---programa-n°-77-y-red-blh",
   "private": true,
   "version": "0.0.0",
   "type": "module",
